<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_lo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayish"
    android:theme="@style/Theme.Quranpak"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/prev_btn"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/alata"
        android:foregroundTint="#f6f6f6"
        android:text="@string/previous"
        android:textColor="@color/grayish"
        app:layout_constraintEnd_toStartOf="@+id/next_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ayat_result_text" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/alata"
        android:foregroundTint="#f6f6f6"
        android:text="@string/next"
        android:textColor="@color/grayish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/prev_btn"
        app:layout_constraintTop_toBottomOf="@+id/ayat_result_text" />

    <EditText
        android:id="@+id/ayah_number_ip"
        android:layout_width="184dp"
        android:layout_height="42dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:hint="@string/ayah_number"
        android:inputType="number"
        android:paddingStart="7dp"
        android:paddingEnd="7dp"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:textColor="@color/golden"
        android:textColorHint="@color/dark_golden"
        android:textIsSelectable="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/surah_num_ip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/surah_num_ip" />

    <EditText
        android:id="@+id/surah_num_ip"
        android:layout_width="184dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:hint="@string/surah_number"
        android:inputType="number"
        android:paddingStart="7dp"
        android:paddingEnd="7dp"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:textColor="@color/golden"
        android:textColorHint="@color/dark_golden"
        android:textIsSelectable="false"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/ayah_number_ip"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/alata"
        android:text="@string/search_ayah"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_text" />

    <TextView
        android:id="@+id/showing_result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/alata"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_btn" />

    <TextView
        android:id="@+id/surah_name_text"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/alata"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:text="الفاتحۃ"
        android:textColor="@color/golden"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_btn" />

    <TextView
        android:id="@+id/ayah_number_text"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="42dp"
        android:fontFamily="@font/alata"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:text="آیت"
        android:textAlignment="textEnd"
        android:textColor="@color/golden"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_btn" />

    <TextView
        android:id="@+id/bismillah_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/alata"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:text="@string/bismillah"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_btn" />

    <TextView
        android:id="@+id/ayat_result_text"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:layout_marginTop="24dp"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/alata"
        android:isScrollContainer="true"
        android:overScrollMode="ifContentScrolls"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingBottom="7dp"
        android:scrollbarSize="2dp"
        android:scrollbarThumbVertical="@color/dark_golden"
        android:scrollbars="vertical"
        android:textAlignment="center"
        android:textColor="@color/golden"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bismillah_text" />

    <TextView
        android:id="@+id/header_text"
        android:layout_width="409dp"
        android:layout_height="56dp"
        android:background="@color/golden"
        android:fontFamily="@font/coda"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/app_name2"
        android:textAlignment="gravity"
        android:textColor="@color/grayish"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/search_btn"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/alata"
        android:foregroundTint="#f6f6f6"
        android:text="@string/showing_res"
        android:textColor="@color/grayish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surah_num_ip" />

</androidx.constraintlayout.widget.ConstraintLayout>